# folioflex

./: .buildinfo  .coveragerc  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.web  Dockerfile.worker  LICENSE.md  MANIFEST.in  Procfile  README.md  app.py  dashboard.py  development.html  fly.toml  function.py  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  requirements_ci.txt  search.html  searchindex.js  setup.py  usage.html  worker.py
.doctrees/: development.doctree  environment.pickle  index.doctree  installation.doctree  reference.doctree  usage.doctree
.github/workflows/: main.yml  python-publish.yml  test-and-deploy.yml
_sources/: index.rst.txt  reference.rst.txt  usage.rst.txt
docs/: conf.py  index.rst  installation.rst  reference.rst  structure.md  usage.rst
docs/source/: conf.py  development.rst  index.rst  installation.rst  reference.rst  usage.rst
files/: portfolio.ini  transactions.csv  transactions.xlsx
folioflex/: __init__.py  version.py
folioflex/budget/: __init__.py  amazon.py  budget.py  models.py
folioflex/chatbot/: __init__.py  providers.py  scraper.py
folioflex/configs/: __init__.py  budget_personal.ini  config.ini  config.yml  logging.ini  portfolio.ini  portfolio_dash.ini  portfolio_demo.ini  portfolio_personal.ini  transactions_demo.csv
folioflex/dashboard/: __init__.py  app.py  dashboard_helper.py  layouts.py
folioflex/dashboard/assets/: manifest.json  meta_tags.html  style.css
folioflex/dashboard/components/: __init__.py  auth.py  dash_formats.py  layouts.py
folioflex/dashboard/pages/: __init__.py  budget.py  ideas.py  login.py  logout.py  macro.py  personal.py  plaid.py  plaid_link.py  sectors.py  stocks.py  tracker.py
folioflex/dashboard/utils/: __init__.py  dashboard_helper.py  login_handler.py
folioflex/integrations/plaid/: __init__.py  database.py  server.py
folioflex/integrations/plaid/init/: create.sql
folioflex/market/: __init__.py  screener.py
folioflex/portfolio/: __init__.py  assets.py  broker.py  heatmap.py  helper.py  integrations.py  loans.py  portfolio.py  wrappers.py
folioflex/utils/: __init__.py  cli.py  config_helper.py  cq.py  custom_logger.py  database.py  mailer.py
iex/: __init__.py  constants.py  cq.py  utils.py
iex/configs/: config.ini  portfolio.ini
iex/dashboard/: dashboard_helper.py  layouts.py  page_constants.py  utils.py
iex/dashboard/pages/: crypto.py  ideas.py  login.py  macro.py  personal.py  sectors.py  stocks.py  tracker.py
iex/market/: screener.py
iex/pages/: crypto.py  ideas.py  macro.py  personal.py  sectors.py  stocks.py  tracker.py
iex/portfolio/: heatmap.py  manager.py  portfolio.py  wrappers.py
iex/util/: constants.py  cq.py  heatmap.py  layouts.py  page_constants.py  portfolio.py  utils.py  worker.py
iex/utils/: config_helper.py  cq.py  mailer.py
integrations/plaid/: README.md
integrations/plaid/client/: Dockerfile  package-lock.json  package-windows.json  package.json
integrations/plaid/client/src/components/: Banner.tsx  TransactionsPage.tsx  TransactionsTable.tsx  types.ts
integrations/plaid/client/src/services/: api.tsx
integrations/plaid/database/init/: create.sql
integrations/plaid/server/: index.js  package-lock.json  package.json  plaid.js  update_transactions.js  util.js
integrations/plaid/server/db/queries/: items.js  transactions.js
integrations/plaid/server/routes/: users.js
integrations/plaid_rewrite/: server.py
integrations/unused_integrations/: README.md
notebook/: portfolio_example.ipynb
pages/: crypto.py  ideas.py  layout.py  layouttab.py  macro.py  sectors.py  stocks.py  tracker.py  utils.py
tests/: __init__.py  test_asset_loans.py  test_budget.py  test_chatbot.py  test_portfolio.py  test_utils.py  test_wrappers.py
tests/files/: price_history.csv  test_budget.csv  test_budget.ini  test_config.yml  test_portfolio.ini  test_transactions.csv  test_transactions.xlsx  transactions.xlsx
